--- a/index.html
+++ b/index.html
@@ -12,12 +12,42 @@
 </head>
 
 <body>
+<!--
+  <section class="showcase">
+    <audio class="song" controls loop>
+                <source src="final_hbd.mp3"></source>
+                Your browser isn't invited for super fun audio time.
+            </audio>
+
+            <div class="video-container">
+                <video src="final_vid.mkv" autoplay muted loop></video>
+            </div>
+            <div class="content">
+              <div class="navbar navbar-fixed-bottom">
+            <div class="row">
+                <div class="col-md-6 text-center col-md-offset-3">
+                </div>
+            </div>
+        <div class="button_cont" align="center"><button class="example_e" href="add-website-here" target="_blank" rel="nofollow noopener" id="play1">Click me gently</button></div>
+    <script>
+    var dt = new Date();
+    document.getElementById("datetime").innerHTML = dt.toLocaleTimeString();
+    </script>
+            </div>
+        </section>
+ -->
+  <script>
+    var dt = new Date();
+    document.getElementById("datetime").innerHTML = dt.toLocaleTimeString();
+    </script>
+
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
-        <span id="name">Lydia</span>
+        <span id="name">Siddhi</span>
       </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
+      <p class="two" id="greetingText">So finally you managed to open up at</p>
+      <p>Date/Time: <span id="datetime"></span></p>
     </div>
     <div class="three">
       <p>It's your birthday!!! :D</p>
