--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <h1 class="one">Hey
         <span id="name">Siddhi</span>
       </h1>
-      <p class="two" id="greetingText">So finally you managed to open up at</p>
+      <p class="two">So finally you managed to open up at</p>
       <p>Date/Time: <span id="datetime"></span></p>
     </div>
     <div class="three">
