--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <span id="name">Siddhi</span>
       </h1>
       <p class="two">So finally you managed to open up at</p>
-      <p>Date/Time: <span id="datetime"></span></p>
+      <div><p>Date/Time: <span id="datetime"></span></p></div>
     </div>
     <div class="three">
       <p>It's your birthday!!! :D</p>
