--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <span id="name">Siddhi</span>
       </h1>
       <p class="two">So finally you managed to open up at</p>
-      <p class="two">Time: <span id="datetime"></span></p></div>
+      <p class="two">Time: <span id="datetime"></span></p>
     </div>
     <div class="three">
       <p>It's your birthday!!! :D</p>
