--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
-        <span id="name">Siddhi</span>
+        <span id="name">Siddhi ♥</span>
       </h1>
-      <p class="two">So finally you managed to open up at  <span id="datetime"></span></p>
+      <p class="two">Toh itni mashakat aur minnato ke baad finally you manage to give me a chance to present before you this at <span id="datetime"></span></p>
     </div>
     <div class="three">
       <p>It's your birthday!!! :D</p>
