--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -10,6 +11,12 @@
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Julee&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Tillana&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -37,43 +44,49 @@
             </div>
         </section>
  -->
- 
+
   <div class="container">
     <div class="one">
-      <h1 class="one">Hey
-        <span id="name">Siddhi ♥</span>
+      <h1 class="one"><i class="fa fa-heart" style="font-size:48px;color:red"></i> Hey
+        <span id="name">Siddhi <i class="fa fa-heart" style="font-size:48px;color:red"></i></span>
       </h1>
-      <p class="two">Toh itni mashakat aur minnato ke baad finally you manage to give me a chance to present before you this at <span id="datetime"></span></p>
+      <p class="two">Toh itni mashakat aur minnato ke baad finally you manage to give me a chance to present before you this at <span id="datetime"></span> the
+      next day i.e. 27th Aug</p>
     </div>
     <div class="three">
-      <p>It's your birthday!!! :D</p>
+      <p>On this day was born one beautiful angel, and fortunately she fell in love with me!!!</p>
+        <p>😍😍😍</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! Yeee! Many many happy blah...</p>
+        <p class="hbd-chatbox">Happy birthday to you!! Many many happy ...</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
     <div class="five">
       <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped.</p>
-      <p class="idea-3">I realised, I wanted to do something
+      <p class="idea-2">But then I stopped</p>
+      <p class="idea-3">I realised being far away from you i can do something
         <strong>special</strong>.</p>
       <p class="idea-4">Because,</p>
       <p class="idea-5">You are Special
-        <span>:)</span>
+        <span>:)🌹</span>
+
       </p>
-      <p class="idea-6">
+    <!--   <p class="idea-6">
         <span>S</span>
         <span>O</span>
-      </p>
+      </p> -->
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" id="imagePath">
-      <img src="img/hat.svg" alt="" class="hat">
+      <img src="Images/imgf.jpg" alt="" class="lydia-dp" id="imagePath">
+   <!--    <img src="img/hat.svg" alt="" class="hat"> -->
       <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h1></h1>
+        <h3 class="wish-hbd">Happy Birthday Jaan!</h3>
+         <!-- <h5 id="wishText">Happy Birthday my baby! I want you smile all this special day.
+        Seeing you smile is a great deal for me, I would do anything humanly possible for your happiness,
+        because your love is everything to me</h5> -->
       </div>
     </div>
     <div class="seven">
@@ -143,8 +156,12 @@
       </svg>
     </div>
     <div class="nine">
-      <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay">Or click, if you want to watch it again.</p>
+      <p>Happy Birthday my baby 😘 I want you smile all this special day 😊
+        Seeing you smile is a great deal for me, I would do anything humanly possible for your happiness
+        because your love is everything to me</p>
+      <p class="link"><a>Now head over to the chat and visit another link, a message is waiting for you</a></p>
+      <p id="replay">Or click, if you want to watch this again.</p>
+      <p> Made With <span><i class="fa fa-heart" style="font-size:48px;color:red"></i></span> by Sanskar 🤟🏻</p>
       <p class="last-smile">:)</p>
     </div>
   </div>
