--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <h1 class="one"><i class="fa fa-heart" style="font-size:48px;color:red"></i> Hey
         <span id="name">Siddhi <i class="fa fa-heart" style="font-size:48px;color:red"></i></span>
       </h1>
-      <p class="two">Toh itni mashakat aur minnato ke baad finally you manage to give me a chance to present before you this at <span id="datetime"></span> the
-      next day i.e. 27th Aug</p>
+      <p class="two">Toh itni mashakat aur minnato ke baad finally you manage to give me a chance to present before you this at <span id="datetime"></span>
+        two days later i.e. 28th Aug</p>
     </div>
     <div class="three">
       <p>On this day was born one beautiful angel, and fortunately she fell in love with me!!!</p>
