--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       </div>
     </div>
     <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped</p>
+      <p class="idea-1">This is how everyone sends a wish or calls you up to say the same.</p>
+      <p class="idea-2">But</p>
       <p class="idea-3">I realised being far away from you i can do something
         <strong>special</strong>.</p>
       <p class="idea-4">Because,</p>
