--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <span id="name">Siddhi <i class="fa fa-heart" style="font-size:48px;color:red"></i></span>
       </h1>
       <p class="two">Toh itni mashakat aur minnato ke baad finally you manage to give me a chance to present before you this at <span id="datetime"></span>
-        two days later i.e. 28th Aug</p>
+        three days later i.e. 29th Aug</p>
     </div>
     <div class="three">
       <p>On this day was born one beautiful angel, and fortunately she fell in love with me!!!</p>
